--- a/Docker/php-v85/nginx.conf
+++ b/Docker/php-v85/nginx.conf
@@ -1,11 +1,12 @@
 server {
     listen 80;
-    index index.php index.html;
     server_name localhost;
     root /var/www/html;
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
+    index index.php index.html;
+
+    location /StrategyPattern/SolutionV1/ {
+        try_files $uri $uri/ /StrategyPattern/SolutionV1/index.php?$query_string;
     }
 
     location ~ \.php$ {
@@ -16,14 +17,14 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
-
+    
     error_page 403 404 /error.html;
 
     location = /error.html {
         root /usr/share/nginx/html;
         internal;
     }
-    
+
     location ~ /\.(?!well-known).* {
         deny all;
     }
