Build-Fix: setup CI + ajust psr4

--- a/Challenges/composer.json
+++ b/Challenges/composer.json
@@ -1,19 +1,18 @@
 {
   "autoload": {
     "psr-4": {
-      "APP\\": "StrategyPattern/"
-    }
+        "APP\\": "StrategyPattern/"
+    },
+    "exclude-from-classmap": [
+      "StrategyPattern/Problem/index.php"
+    ]
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.9",
     "friendsofphp/php-cs-fixer": "^3.60"
   },
   "scripts": {
-    "lint": [
-    "composer dump-autoload -o --strict-psr",
-    "phpcs --standard=PSR12 StrategyPattern"
-    ],
-
+    "lint": "composer dump-autoload -o --strict-psr",
     "fix": [
       "php-cs-fixer fix StrategyPattern"
     ]
